--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       </div>
     </section>
     <section class="features">
-      <div class="row">
+      <div class="row container-fluid">
         <div class="col-md-4 sec-1 sect">
           <h2>Planing</h2>
           <p>Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet</p>
