--- a/index.html
+++ b/index.html
@@ -205,20 +205,33 @@
           </div>
         </div>
       </div>
-      <div class="owl-carousel owl-theme">
-          <div class="item"><h4>1</h4></div>
-          <div class="item"><h4>2</h4></div>
-          <div class="item"><h4>3</h4></div>
-          <div class="item"><h4>4</h4></div>
-          <div class="item"><h4>5</h4></div>
-          <div class="item"><h4>6</h4></div>
-          <div class="item"><h4>7</h4></div>
-          <div class="item"><h4>8</h4></div>
-          <div class="item"><h4>9</h4></div>
-          <div class="item"><h4>10</h4></div>
-          <div class="item"><h4>11</h4></div>
-          <div class="item"><h4>12</h4></div>
+    </section>
+    <section class="comments">
+      <div class="container com-slider">
+        <div class="owl-carousel owl-theme">
+            <div class="item">
+              <div class="comments-items">
+                <img src="img/quote.png" class="img-fluid">
+                <h6>Donec porttitor imperdiet congue orci consequat mattis. Donec rutrum sollicitudin. Pellentesque id dolor tempor sapien feugiat ultrices nec sed neque. Fusce ac mattis nulla. Morbi eget ornare dui.</h6>
+                <img src="img/face.png" class="img-fluid">
+                <h4>Robert Thompson</h4>
+                <h5>Business Owner</h5>
+              </div>
+            </div>
+            <div class="item">
+              <div class="comments-items">
+                <img src="img/quote.png" class="img-fluid">
+                <h6>Donec porttitor imperdiet congue orci consequat mattis. Donec rutrum sollicitudin. Pellentesque id dolor tempor sapien feugiat ultrices nec sed neque. Fusce ac mattis nulla. Morbi eget ornare dui.</h6>
+                <img src="img/face.png" class="img-fluid">
+                <h4>Robert Thompson</h4>
+                <h5>Business Owner</h5>
+              </div>
+            </div>
+        </div>
       </div>
+      <div class="overlay3">
+          
+        </div>
     </section>
     
 
@@ -227,10 +240,12 @@
 
 
 
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 
-
-
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/owl.carousel.js"></script>
 
     <script type="text/javascript">
           $('.owl-carousel').owlCarousel({
@@ -251,10 +266,6 @@
           })
     </script>
 
-    <script type="text/javascript" src="js/jquery.min.js"></script>
-    <script type="text/javascript" src="js/owl.carousel.js"></script>
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 
   </body>
 </html>
