--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         $('.bx-controls').remove();
         $('.bx-wrapper').css({'margin-bottom':'0px'});
         $('.bx-wrapper').css({'box-shadow':'none'});
-        $('.bx-wrapper').css({'border':'none'});
+        $('.bx-wrapper').css({'border-bottom':'none'});
         $('.bx-wrapper').css({'cursor':'grab'});
         $('.owl-carousel').css({'cursor':'grab'});
       });
